added the case studies from homepage

--- a/projects.html
+++ b/projects.html
@@ -10,16 +10,72 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.3.0/css/all.min.css">
     <!--font awesome-->
 </head>
+
 <body>
     <main>
-         <!-- hero section -->
-         <section id="hero" class="hero flex row">
+        <!-- hero section -->
+        <section id="hero" class="hero flex row">
             <div class="bg_overlay"></div>
             <div class="main_text flex row">
                 <h1 class="main_title">Projects</h1>
             </div>
 
         </section>
+        <!--projects ||  success stories || case studies -->
+        <section class="case_studies container section_spacing">
+            <h2 class="section_title">Case Studies</h2>
+            <p class="section_text">See how we have helped businesses like yours reach their goals with our IT
+                solutions. Our portfolio showcases a diverse range of industries, each with its own unique challenges
+                and requirements.</p>
+
+            <!-- projects cards -->
+            <div class="case_carousel flex row">
+                <div class="case_card">
+                    <img class="card_image" src="/assets/images/video_edit.jpg"
+                        alt="image of video editing software program on an ultra wide screen">
+
+                    <section class="card_article">
+                        <h3 class="card_title">Inked Productions</h3>
+                        <span class="card_text">Inked Productions is a leading film production company, known for
+                            producing critically acclaimed and commercially successful films. The company faced a
+                            challenge in setting up a 3-room film edit suite with shared storage, to support their
+                            growing business. With the increasing demand for their services, they required a reliable
+                            and efficient IT solution that could meet their unique needs and support their growing
+                            business.</span>
+                    </section>
+                </div>
+                <div class="case_card">
+                    <img class="card_image" src="/assets/images/server.jpg"
+                        alt="image of a server room. img ix is printed on the wall of the server">
+                    <section class="card_article">
+                        <h3 class="card_title">Ant Media</h3>
+                        <span class="card_text">Ant Media is a bustling animation studio that creates visually stunning
+                            animations for a wide range of audiences. With their imaginative and creative team, they
+                            strive to bring new and innovative ideas to life. However, as the studio grew, they faced a
+                            common challenge in the industry- managing their expanding network infrastructure. Ant Media
+                            needed a reliable and efficient solution to keep up with their growing demands and ensure
+                            their workflow remains smooth and seamless. With this in mind, they approached ByteSized
+                            Solutions for help.</span>
+                    </section>
+                </div>
+                <div class="case_card">
+                    <img class="card_image" src="./assets/images/website.jpg"
+                        alt="image of a laptop showing a website on the screen. In the background is an imac showing the same website">
+                    <section class="card_article">
+                        <h3 class="card_title">SoundBeetle Music</h3>
+                        <span class="card_text">SoundBeetle is a cutting-edge music licensing company that is changing
+                            the way people access and license music for their projects. They needed to build a custom
+                            music licensing application that would allow users to search, preview, and license music
+                            tracks in a seamless and user-friendly way. SoundBeetle faced the challenge of developing a
+                            robust and scalable application that would meet the needs of their growing business and
+                            customer base. With the help of ByteSized Solutions, they were able to turn their vision
+                            into a reality.</span>
+                    </section>
+                </div>
+            </div>
+        </section>
+
+
         <footer class="flex row">
             <!-- footer nav  -->
             <nav class="footer_nav flex row">
