--- a/projects.html
+++ b/projects.html
@@ -27,6 +27,7 @@
             <p class="section_text">See how we have helped businesses like yours reach their goals with our IT
                 solutions. Our portfolio showcases a diverse range of industries, each with its own unique challenges
                 and requirements.</p>
+                
 
             <!-- projects cards -->
             <div class="case_carousel flex row">
@@ -42,6 +43,8 @@
                             growing business. With the increasing demand for their services, they required a reliable
                             and efficient IT solution that could meet their unique needs and support their growing
                             business.</span>
+                            <a href="about.html#services" class="btn btn_sec card_btn">Read more <i
+                                class="fa fa-arrow-right"></i></a>
                     </section>
                 </div>
                 <div class="case_card">
@@ -56,6 +59,8 @@
                             needed a reliable and efficient solution to keep up with their growing demands and ensure
                             their workflow remains smooth and seamless. With this in mind, they approached ByteSized
                             Solutions for help.</span>
+                            <a href="about.html#services" class="btn btn_sec card_btn">Read more <i
+                                class="fa fa-arrow-right"></i></a>
                     </section>
                 </div>
                 <div class="case_card">
@@ -70,6 +75,8 @@
                             robust and scalable application that would meet the needs of their growing business and
                             customer base. With the help of ByteSized Solutions, they were able to turn their vision
                             into a reality.</span>
+                            <a href="about.html#services" class="btn btn_sec card_btn">Read more <i
+                                class="fa fa-arrow-right"></i></a>
                     </section>
                 </div>
             </div>
