--- a/projects/inked-productions.html
+++ b/projects/inked-productions.html
@@ -13,6 +13,28 @@
 
 <body>
     <main>
+        <header>
+            <!-- navbar -->
+            <nav class="header flex container">
+                <!-- main brand logo -->
+                <section class="brand flex">
+                    <img src="/assets/images/logo.svg" alt="" class="brand_icon">
+                    <a class="brand" href="index.html">
+                        <h1><span>ByteSized</span><br> Solutions</h1>
+                    </a>
+                </section>
+                <!--mobile nav toggle-->
+                <label class="hamburger_icon" for="toggle"><i class="fa fa-bars"></i></label>
+                <input type="checkbox" name="" id="toggle" hidden>
+
+                <ul class=" nav_items flex">
+                    <li><a  class="nav_item" href="index.html">Home</a></li>
+                    <li><a class="nav_item" href="#about">About</a></li>
+                    <li><a aria-current="page"class="nav_item" href="#projects">Projects</a></li>
+                    <li><a class="nav_item btn btn_pry" href="#contact">Get In Touch</a></li>
+                </ul>
+            </nav>
+        </header>
         <!-- hero section -->
         <section id="hero" class="hero flex row">
             <div class="bg_overlay"></div>
@@ -33,14 +55,23 @@
 
 
             <h3 class="sub_title">Challenge</h3>
-            <p class="article_text">Inked Productions was in need of setting up a film edit suite with three rooms, all connected by a shared storage solution. They were in search of a reliable and efficient system to support their film production process.</p>
+            <p class="article_text">Inked Productions was in need of setting up a film edit suite with three rooms, all
+                connected by a shared storage solution. They were in search of a reliable and efficient system to
+                support their film production process.</p>
             <h3 class="sub_title">Solution</h3>
-            <p class="article_text">ByteSized Solutions implemented a cloud-based storage solution that would allow the team at Inked Productions to access their files and projects from any room. This solution made it possible for the team to work together seamlessly on large-scale projects without having to transfer files between rooms. The ByteSized Solutions team also set up a secure network that ensured the confidentiality of the clients' projects and data.</p>
+            <p class="article_text">ByteSized Solutions implemented a cloud-based storage solution that would allow the
+                team at Inked Productions to access their files and projects from any room. This solution made it
+                possible for the team to work together seamlessly on large-scale projects without having to transfer
+                files between rooms. The ByteSized Solutions team also set up a secure network that ensured the
+                confidentiality of the clients' projects and data.</p>
             <h3 class="sub_title">Impact</h3>
-            <p class="article_text">The implementation of the cloud-based storage solution and secure network had a significant impact on the productivity and workflow of Inked Productions. The team was able to complete projects faster and more efficiently, with less downtime. The clients were also pleased with the level of security and peace of mind that came with having their projects and data protected.
+            <p class="article_text">The implementation of the cloud-based storage solution and secure network had a
+                significant impact on the productivity and workflow of Inked Productions. The team was able to complete
+                projects faster and more efficiently, with less downtime. The clients were also pleased with the level
+                of security and peace of mind that came with having their projects and data protected.
             </p>
         </section>
-        
+
         <footer class="flex row">
             <!-- footer nav  -->
             <nav class="footer_nav flex row">
