--- a/about.html
+++ b/about.html
@@ -27,9 +27,9 @@
             <input type="checkbox" name="" id="toggle" hidden>
 
             <ul class=" nav_items flex">
-                <li><a aria-current="page" class="nav_item" href="index.html">Home</a></li>
-                <li><a class="nav_item" href="#about">About</a></li>
-                <li><a class="nav_item" href="#projects">Projects</a></li>
+                <li><a class="nav_item" href="index.html">Home</a></li>
+                <li><a aria-current="page" class="nav_item" href="about.html">About</a></li>
+                <li><a class="nav_item" href="projects.html">Projects</a></li>
                 <li><a class="nav_item btn btn_pry" href="#contact">Get In Touch</a></li>
             </ul>
         </nav>
