--- a/about.html
+++ b/about.html
@@ -107,45 +107,58 @@
 
             <!-- services cards -->
             <div class="grid services_cards ">
-                <div class="service_card card">
-                    <img src="/assets/images/cloud-computing-4276.svg" alt="service_card_image"
+                <div class="service_card card relative">
+                    <img src="./assets/images/cloud-computing-4276.svg" alt="icon of cloud computing"
                         class="service_card_image">
                     <h3 class="card_title">Cloud Computing Solutions</h3>
                     <span class="card_text">Take advantage of the latest technology with our cloud computing
                         solutions, designed to increase efficiency and reduce costs.</span>
+                    <a href="about.html#services" class="btn btn_sec card_btn absolute">Read more <i
+                            class="fa fa-arrow-right"></i></a>
+
                 </div>
                 <div class=" card">
-                    <img src="/assets/images/database-security-2358.svg" alt="service_card_image"
+                    <img src="./assets/images/database-security-2358.svg" alt="icon of cyber security"
                         class="service_card_image">
                     <h3 class="card_title">Cyber Security and Data Protection</h3>
                     <span class="card_text">Keep your company's sensitive information secure with our
                         comprehensive cyber security solutions.</span>
+                    <a href="about.html#services" class="btn btn_sec card_btn absolute">Read more <i
+                            class="fa fa-arrow-right"></i></a>
                 </div>
                 <div class=" card">
-                    <img src="/assets/images/network.svg" alt="service_card_image" class="service_card_image">
+                    <img src="./assets/images/network.svg" alt="icon of computer network" class="service_card_image">
                     <h3 class="card_title">Network Design and Implementation</h3>
                     <span class="card_text">Ensure a seamless and reliable network with our expert design and
                         implementation services.</span>
+                    <a href="about.html#services" class="btn btn_sec card_btn absolute">Read more <i
+                            class="fa fa-arrow-right"></i></a>
                 </div>
                 <div class=" card">
-                    <img src="/assets/images/laptop-cloud-storage-12595.svg" alt="service_card_image"
+                    <img src="./assets/images/laptop-cloud-storage-12595.svg" alt="icon of cloud storage"
                         class="service_card_image">
                     <h3 class="card_title">Managed IT Services</h3>
                     <span class="card_text">Get the software your business needs with our customized software
                         development services.</span>
+                    <a href="about.html#services" class="btn btn_sec card_btn absolute">Read more <i
+                            class="fa fa-arrow-right"></i></a>
                 </div>
                 <div class=" card">
-                    <img src="/assets/images/programming-web-code-blue-screen-17122.svg" alt="service_card_image"
+                    <img src="./assets/images/programming-web-code-blue-screen-17122.svg" alt="sicon of programming code symbol"
                         class="service_card_image">
                     <h3 class="card_title">Software Development and Customization</h3>
                     <span class="card_text">TGet the software your business needs with our customized software
                         development services.</span>
+                    <a href="about.html#services" class="btn btn_sec card_btn absolute">Read more <i
+                            class="fa fa-arrow-right"></i></a>
                 </div>
                 <div class=" card">
-                    <img src="/assets/images/checklist-13201.svg" alt="service_card_image" class="service_card_image">
+                    <img src="./assets/images/checklist-13201.svg" alt="icon of a checklist" class="service_card_image">
                     <h3 class="card_title">QA & Testing</h3>
                     <span class="card_text">Ensure the quality and reliability of your software with our
                         thorough quality assurance and testing services.</span>
+                    <a href="about.html#services" class="btn btn_sec card_btn absolute">Read more <i
+                            class="fa fa-arrow-right"></i></a>
                 </div>
 
             </div>
