fix mobile menu positioning and color

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <body>
     <header>
         <!-- navbar -->
-        <nav class="header flex container">
+        <nav class="header flex container relative">
             <!-- main brand logo -->
             <section class="brand flex">
                 <img src="/assets/images/logo.svg" alt="" class="brand_icon">
