shortened services article[D[D[D[D[D[D[D[D[D[D[D[D[D[D[D[D[F

--- a/about.html
+++ b/about.html
@@ -52,58 +52,40 @@
                 tech demons. Our passion for technology and our drive to stay ahead of the curve has made us the go-to
                 choice for companies in need of top-notch IT consulting services.
 
-                Our team is made up of a diverse group of individuals, each with their own area of expertise. Whether
-                it's software development, cloud computing, or network security, our consultants have the experience and
-                knowledge to tackle any tech challenge that comes their way.
-
                 We've helped companies of all sizes, from startups to large corporations, and we're proud of the impact
                 we've made. Our clients trust us to keep their businesses running smoothly and to help them stay ahead
                 of the curve in an ever-evolving technological landscape.</p>
         </section>
         <section class="cta_banner section_spacing">
             <h3 class="section_title">Our Approach Is Simple</h3>
-            <p class="section_text">At Exorcist Systems, we believe that technology should be a tool for growth, not a
+            <p class="section_text">At ByteSyzed, we believe that technology should be a tool for growth, not a
                 hindrance. That's why
                 we take a holistic approach to our work, considering all aspects of a company's technology needs and
                 crafting custom solutions to meet those needs.</p>
         </section>
 
         <!-- services section  -->
-        <section class="container section_spacing grid" id="services">
-            <h2 class="section_title">Our Services</h2>
+        <section class="container section_spacing grid about_services" id="services">
             <div class="about_services grid">
                 <p class="section_text">At ByteSized Solutions, we take a proactive and customer-centric approach to
                     delivering top-notch technology solutions. Our team is made up of experienced professionals who stay
                     ahead of the curve in terms of industry developments and advancements in cloud computing,
                     cybersecurity,
                     and data management.</p>
-                <img src="/assets/images/businessman-pointing-his-presentation-futuristic-digital-screen.jpg" alt=""
-                    class="article_image">
                 <p class="section_text"> Our approach is centered around understanding our clients' unique needs and
                     delivering customized
                     solutions that not only meet but exceed their expectations. Whether it's migrating to the cloud,
                     improving data security, or optimizing IT infrastructure, we work closely with our clients to
                     identify
                     and address their specific challenges.</p>
-                <img src="/assets/images/businessman-pointing-his-presentation-futuristic-digital-screen.jpg" alt=""
-                    class="article_image">
-
                 <p class="section_text">We believe that technology should support and enhance business processes, not
                     hinder
                     them. That's why we
                     use a collaborative approach to find the right solutions for each of our clients. We provide expert
                     guidance and support throughout the entire process, ensuring a smooth and seamless transition to the
                     latest technology.</p>
-                <img src="/assets/images/businessman-pointing-his-presentation-futuristic-digital-screen.jpg" alt=""
-                    class="article_image">
-
-                <p class="section_text">At ByteSized Solutions, we pride ourselves on delivering value to our clients by
-                    streamlining processes,
-                    reducing costs, and increasing efficiency. With our approach, you can be confident that your
-                    technology
-                    needs are in the hands of experts who are dedicated to helping you achieve your business goals.</p>
-
             </div>
+            <h2 class="section_title">Our Services</h2>
 
             <!-- services cards -->
             <div class="grid services_cards ">
