add all articles for service page

--- a/about.html
+++ b/about.html
@@ -42,6 +42,8 @@
             <div class="bg_overlay"></div>
             <div class="main_text flex row">
                 <h1 class="main_title">About us</h1>
+                <p class="main_subtitle">Your Trusted IT Consultants</p>
+
             </div>
 
         </section>
@@ -65,8 +67,8 @@
         </section>
 
         <!-- services section  -->
-        <section class="container section_spacing grid about_services" id="services">
-            <div class="about_services grid">
+        <section class="container section_spacing grid services" id="services">
+            <div class="about_services section_spacing grid">
                 <p class="section_text">At ByteSized Solutions, we take a proactive and customer-centric approach to
                     delivering top-notch technology solutions. Our team is made up of experienced professionals who stay
                     ahead of the curve in terms of industry developments and advancements in cloud computing,
