add a brief writeup to show why choose us

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
     <main>
         <!-- hero section -->
         <section id="hero" class="hero flex row">
-            <div class="bg_overlay"></div>
+            <div class="bg_overlay"></div> <!--for color overlay on bg-->
             <div class="main_text flex row">
                 <h1 class="main_title">We are ByteSized Solutions</h1>
                 <p class="main_subtitle">Your Trusted IT Consultants</p>
@@ -106,7 +106,7 @@
                     <img src="./assets/images/programming-web-code-blue-screen-17122.svg" alt="sicon of programming code symbol"
                         class="service_card_image">
                     <h3 class="card_title">Software Development and Customization</h3>
-                    <span class="card_text">TGet the software your business needs with our customized software
+                    <span class="card_text">Get the software your business needs with our customized software
                         development services.</span>
                     <a href="about.html#services" class="btn btn_sec card_btn absolute">Read more <i
                             class="fa fa-arrow-right"></i></a>
@@ -126,6 +126,9 @@
         <!-- why choose us section  -->
         <section class="offers container section_spacing">
             <h2 class="section_title">Why Choose Us</h2>
+            <p class="section_text">At Bytesized Solutions, our priority is to help businesses like yours understand the benefits of incorporating technology into their operations. Our team is highly concerned about how technology can positively impact your business, improve efficiency, reduce costs, and ultimately drive success. To help you better understand the value of IT integration, we encourage you to watch this video that showcases the benefits of IT and Technology for businesses. By partnering with us, you'll receive personalized support from a team of experts who are dedicated to helping you reach your goals.</p>
+            <iframe width="100%" height="315px" src="https://www.youtube.com/embed/yBUMLYw17t4" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+            
 
             <!-- offers cards -->
             <div class="services_cards grid">
@@ -168,12 +171,14 @@
         </section>
 
         <!-- get in touch banner -->
-        <section class="cta_banner section_spacing">
+        <section class="cta_banner section_spacing relative">
             <h3 class="section_title">Get In Touch</h3>
             <p class="section_text">Don't let technology be a burden for your business. Take the first step towards a
                 more efficient and secure future by reaching out to ByteSized Solutions today. Our team is ready to help
                 you find the perfect IT solution for your needs.</p>
             <a href="#contact" class="btn btn_pry cta">Get In Touch</a>
+            <div class="bg_overlay"></div> <!--for color overlay on bg-->
+
         </section>
 
         <!--projects ||  success stories || case studies -->
