[A[Bchange case study card on home page to grid

--- a/index.html
+++ b/index.html
@@ -186,7 +186,7 @@
 
             <!-- projects cards -->
             <div class="case_carousel flex row">
-                <div class="case_card">
+                <div class="case_card grid">
                     <img class="card_image" src="/assets/images/video_edit.jpg"
                         alt="image of video editing software program on an ultra wide screen">
 
@@ -201,7 +201,7 @@
                             <a href="about.html#services" class="btn btn_sec card_btn">Read more <i class="fa fa-arrow-right"></i></a>
                     </section>
                 </div>
-                <div class="case_card">
+                <div class="case_card grid">
                     <img class="card_image" src="/assets/images/server.jpg"
                         alt="image of a server room. img ix is printed on the wall of the server">
                     <section class="card_article">
@@ -216,7 +216,7 @@
                             <a href="about.html#services" class="btn btn_sec card_btn">Read more <i class="fa fa-arrow-right"></i></a>
                     </section>
                 </div>
-                <div class="case_card">
+                <div class="case_card grid">
                     <img class="card_image" src="./assets/images/website.jpg"
                         alt="image of a laptop showing a website on the screen. In the background is an imac showing the same website">
                     <section class="card_article">
