fix footer cta btn color

--- a/index.html
+++ b/index.html
@@ -293,13 +293,13 @@
                         <h1><span>ByteSized</span><br> Solutions</h1>
                     </a>
                 </section>
-                <ul class=" nav_items flex row">
+                <ul class=" footer_nav_items flex row">
                     <h6 class="footer_nav_items_title">Navigation</h6>
                     <li><a class="nav_item" href="index.html">Home</a></li>
                     <li><a class="nav_item" href="about.html">About</a></li>
                     <li><a class="nav_item" href="about.html/#services">Services</a></li>
                     <li><a class="nav_item" href="projects.html">Projects</a></li>
-                    <li><a class="nav_item btn btn_pry" href="#contact">Get In Touch</a></li>
+                    <li><a class="nav_item btn btn_pry cta" href="#contact">Get In Touch</a></li>
                 </ul>
             </nav>
             <p>©2023 ByteSized Solutions. All rights reserved</p>
