change hero overlay

--- a/index.html
+++ b/index.html
@@ -28,8 +28,9 @@
 
             <ul class=" nav_items flex">
                 <li><a aria-current="page" class="nav_item" href="index.html">Home</a></li>
-                <li><a class="nav_item" href="#about">About</a></li>
-                <li><a class="nav_item" href="#projects">Projects</a></li>
+                <li><a class="nav_item" href="about.html">About</a></li>
+                <li><a class="nav_item" href="about.html#services">Services</a></li>
+                <li><a class="nav_item" href="projects.html">Projects</a></li>
                 <li><a class="nav_item btn btn_pry" href="#contact">Get In Touch</a></li>
             </ul>
         </nav>
@@ -39,7 +40,6 @@
     <main>
         <!-- hero section -->
         <section id="hero" class="hero flex row">
-            <div class="bg_overlay"></div> <!--for color overlay on bg-->
             <div class="main_text flex row">
                 <h1 class="main_title">We are ByteSized Solutions</h1>
                 <p class="main_subtitle">Your Trusted IT Consultants</p>
@@ -124,7 +124,7 @@
         </section>
 
         <!-- why choose us section  -->
-        <section class="offers container section_spacing">
+        <section class="offers container flex row section_spacing">
             <h2 class="section_title">Why Choose Us</h2>
             <p class="section_text">At Bytesized Solutions, our priority is to help businesses like yours understand the benefits of incorporating technology into their operations. Our team is highly concerned about how technology can positively impact your business, improve efficiency, reduce costs, and ultimately drive success. To help you better understand the value of IT integration, we encourage you to watch this video that showcases the benefits of IT and Technology for businesses. By partnering with us, you'll receive personalized support from a team of experts who are dedicated to helping you reach your goals.</p>
             <iframe width="100%" height="315px" src="https://www.youtube.com/embed/yBUMLYw17t4" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
@@ -236,7 +236,7 @@
 
         <!-- contact section  -->
 
-        <section id="contact" class="contact container section_spacing">
+        <section id="contact" class="contact container flex row section_spacing">
             <h3 class="section_title">Get In Touch</h3>
             <p class="section_text">Don't let technology be a burden for your business. Take the first step towards a
                 more efficient and secure future by reaching out to ByteSized Solutions today. Our team is ready to help
