general contrast, typography and layout fixes

--- a/about.html
+++ b/about.html
@@ -27,10 +27,11 @@
             <input type="checkbox" name="" id="toggle" hidden>
 
             <ul class=" nav_items flex">
-                <li><a class="nav_item" href="index.html">Home</a></li>
-                <li><a aria-current="page" class="nav_item" href="about.html">About</a></li>
+                <li><a aria-current="page" class="nav_item" href="index.html">Home</a></li>
+                <li><a class="nav_item" href="about.html">About</a></li>
+                <li><a class="nav_item" href="about.html#services">Services</a></li>
                 <li><a class="nav_item" href="projects.html">Projects</a></li>
-                <li><a class="nav_item btn btn_pry" href="#contact">Get In Touch</a></li>
+                <li><a class="nav_item btn btn_pry cta" href="#contact">Get In Touch</a></li>
             </ul>
         </nav>
     </header>
@@ -39,7 +40,6 @@
     <main>
         <!-- hero section -->
         <section id="hero" class="hero flex row">
-            <div class="bg_overlay"></div>
             <div class="main_text flex row">
                 <h1 class="main_title">About us</h1>
                 <p class="main_subtitle">Your Trusted IT Consultants</p>
@@ -97,7 +97,7 @@
                     <h3 class="card_title">Cloud Computing Solutions</h3>
                     <span class="card_text">Take advantage of the latest technology with our cloud computing
                         solutions, designed to increase efficiency and reduce costs.</span>
-                    <a href="about.html#services" class="btn btn_sec card_btn absolute">Read more <i
+                    <a href="services.html" class="btn btn_sec card_btn absolute">Read more <i
                             class="fa fa-arrow-right"></i></a>
 
                 </div>
@@ -107,7 +107,7 @@
                     <h3 class="card_title">Cyber Security and Data Protection</h3>
                     <span class="card_text">Keep your company's sensitive information secure with our
                         comprehensive cyber security solutions.</span>
-                    <a href="about.html#services" class="btn btn_sec card_btn absolute">Read more <i
+                    <a href="services.html" class="btn btn_sec card_btn absolute">Read more <i
                             class="fa fa-arrow-right"></i></a>
                 </div>
                 <div class=" card">
@@ -115,7 +115,7 @@
                     <h3 class="card_title">Network Design and Implementation</h3>
                     <span class="card_text">Ensure a seamless and reliable network with our expert design and
                         implementation services.</span>
-                    <a href="about.html#services" class="btn btn_sec card_btn absolute">Read more <i
+                    <a href="services.html" class="btn btn_sec card_btn absolute">Read more <i
                             class="fa fa-arrow-right"></i></a>
                 </div>
                 <div class=" card">
@@ -124,7 +124,7 @@
                     <h3 class="card_title">Managed IT Services</h3>
                     <span class="card_text">Get the software your business needs with our customized software
                         development services.</span>
-                    <a href="about.html#services" class="btn btn_sec card_btn absolute">Read more <i
+                    <a href="services.html" class="btn btn_sec card_btn absolute">Read more <i
                             class="fa fa-arrow-right"></i></a>
                 </div>
                 <div class=" card">
@@ -133,7 +133,7 @@
                     <h3 class="card_title">Software Development and Customization</h3>
                     <span class="card_text">TGet the software your business needs with our customized software
                         development services.</span>
-                    <a href="about.html#services" class="btn btn_sec card_btn absolute">Read more <i
+                    <a href="services.html" class="btn btn_sec card_btn absolute">Read more <i
                             class="fa fa-arrow-right"></i></a>
                 </div>
                 <div class=" card">
@@ -141,7 +141,7 @@
                     <h3 class="card_title">QA & Testing</h3>
                     <span class="card_text">Ensure the quality and reliability of your software with our
                         thorough quality assurance and testing services.</span>
-                    <a href="about.html#services" class="btn btn_sec card_btn absolute">Read more <i
+                    <a href="services.html" class="btn btn_sec card_btn absolute">Read more <i
                             class="fa fa-arrow-right"></i></a>
                 </div>
 
@@ -149,7 +149,8 @@
         </section>
 
         <!-- get in touch banner -->
-        <section class="cta_banner">
+        <section class="container section_spacing grid relative">
+
             <h3 class="section_title">Get In Touch</h3>
             <p class="section_text">Don't let technology be a burden for your business. Take the first step towards a
                 more efficient and secure future by reaching out to ByteSized Solutions today. Our team is ready to help
