--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
                 <li><a class="nav_item" href="about.html">About</a></li>
                 <li><a class="nav_item" href="about.html#services">Services</a></li>
                 <li><a class="nav_item" href="projects.html">Projects</a></li>
-                <li><a class="nav_item btn btn_pry" href="#contact">Get In Touch</a></li>
+                <li><a class="nav_item btn btn_pry cta" href="#contact">Get In Touch</a></li>
             </ul>
         </nav>
     </header>
@@ -168,12 +168,13 @@
 
         <!-- get in touch banner -->
         <section class="cta_banner section_spacing relative">
+            <div class="bg_overlay"></div> <!--for color overlay on bg-->
+
             <h3 class="section_title">Get In Touch</h3>
             <p class="section_text">Don't let technology be a burden for your business. Take the first step towards a
                 more efficient and secure future by reaching out to ByteSized Solutions today. Our team is ready to help
                 you find the perfect IT solution for your needs.</p>
             <a href="#contact" class="btn btn_pry cta">Get In Touch</a>
-            <div class="bg_overlay"></div> <!--for color overlay on bg-->
 
         </section>
 
