--- a/services.html
+++ b/services.html
@@ -14,7 +14,7 @@
 <body>
     <header>
         <!-- navbar -->
-        <nav class="header flex container relative">
+        <nav class="header flex container section_spacing relative">
             <!-- main brand logo -->
             <section class="brand flex">
                 <img src="/assets/images/logo.svg" alt="" class="brand_icon">
@@ -38,7 +38,6 @@
     <main>
                 <!-- hero section -->
                 <section id="hero" class="hero flex row">
-                    <div class="bg_overlay"></div>
                     <div class="main_text flex row">
                         <h1 class="main_title">Services</h1>
                 <p class="main_subtitle">Explore posibilities</p>
@@ -46,9 +45,11 @@
                     </div>
         
                 </section>
-        <section>
+        <section class="container section_spacing grid services_articles">
             <h2>Cloud Computing Solutions</h2>
-            <article>
+            <article class="services_article_block grid">
+            <iframe width="100%" height="315" src="https://www.youtube.com/embed/hB1NVzqn7PU" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+
                 <h3>Cloud computing: The future of computing, in a fluffy white package.</h3>
                 <p>Cloud computing solutions are revolutionizing the way businesses approach technology. With the
                     ability to store and access data and applications remotely, businesses can take advantage of
@@ -71,11 +72,15 @@
                         recovery, as well as virtualized disaster recovery solutions that can help get businesses back
                         up and running quickly in the event of a crisis. </li>
                 </ul>
+
             </article>
+            
         </section>
-        <section>
+        <section class="container section_spacing grid services_articles">
             <h2>Cyber Security and Data Protection</h2>
-            <article>
+            <article class="services_article_block grid">
+                <iframe width="100%" height="315" src="https://www.youtube.com/embed/1vV0t2XbtuU" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+
                 <h3>Why did the cyber criminal cross the network? To get to the other side and steal your data!</h3>
                 <p>Cybersecurity is a critical concern for businesses of all sizes, as the threat of cyber attacks and
                     data breaches continues to grow. That’s why it’s so important to invest in comprehensive cyber
@@ -95,10 +100,12 @@
                 </ul>
             </article>
         </section>
-        <section>
+        <section class="container section_spacing grid services_articles">
             <h2>Network Design and Implementation</h2>
-            <article>
+
+            <article class="services_article_block grid">
                 <h3>Making technology work for you, not the other way around.</h3>
+                <iframe width="100%" height="315" src="https://www.youtube.com/embed/iyLWgpghjHY" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
 
                 <p>A well-designed and implemented network is crucial for businesses to operate effectively and
                     efficiently. Here are three benefits of network design and implementation:</p>
@@ -115,9 +122,10 @@
                 </ol>
             </article>
         </section>
-        <section>
+        <section class="container section_spacing grid services_articles">
             <h2>Managed IT Services</h2>
-            <article>
+            <article class="services_article_block grid">
+                <iframe width="100%" height="315" src="https://www.youtube.com/embed/4vkIaBUsNvI" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
             <h3>Because technology is too complicated for just one person to handle.</h3>
                 <p>Managed IT services provide a comprehensive solution for businesses to manage and maintain their
                     technology infrastructure. With these services, businesses can take advantage of the latest
@@ -137,9 +145,10 @@
                 </ul>
             </article>
         </section>
-        <section>
+        <section class="container section_spacing grid services_articles">
             <h2>Software Development and Customization</h2>
-            <article>
+            <article class="services_article_block grid">
+                <iframe width="100%" height="315" src="https://www.youtube.com/embed/fGdqnWWAXE0" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
                 <h3>The era of applications; a direct window to your customers</h3>
                 <p>Software development and customization can help businesses take advantage of the latest technology to
                     achieve their business goals. With these services, businesses can create custom software solutions
@@ -159,9 +168,12 @@
                 </ul>
             </article>
         </section>
-        <section>
-            <article>
-                <h2>Quality Assurance and Testing</h2>
+        <section class="container section_spacing grid services_articles">
+            <h2>Quality Assurance and Testing</h2>
+            <article class="services_article_block grid">
+            <iframe width="100%" height="315" src="https://www.youtube.com/embed/0hzqHwu1i_I" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+
+                <h3>Be reliable, stay reliable!</h3>
                 <p>Quality assurance and testing is a critical aspect of software development and technology management.
                     With these services, businesses can ensure that their technology solutions are reliable, efficient,
                     and secure. Here are a few benefits of quality assurance and testing:</p>
